--- a/website/requirements/install.txt
+++ b/website/requirements/install.txt
@@ -2,15 +2,18 @@
 
 ## 
 
-umpy does not correctly install through PIP.
+numpy does not correctly install through PIP.
 so a "pip install numpy" should fix it.
  
 ## libsndfile
 aptitude install libsndfile
-/
+# on os x
 sudo port install libsndfile
 
-
+#
+install python-dev libboost-dev libtag1-dev ffmpeg
+# on os x
+brew install boost taglib
 
 
  
