--- a/README
+++ b/README
@@ -26,4 +26,5 @@ cd ~/srv/echoprint-server/solr
 # musicbrainz (local instance, vmware)
 ssh 172.16.82.130 -l musicbrainz
 cd
+screen
 ./run_server.sh --listen 0.0.0.0:5000
