services redis / socketio

--- a/website/requirements/install.txt
+++ b/website/requirements/install.txt
@@ -7,6 +7,7 @@ so a "pip install numpy" should fix it.
  
 ## libsndfile
 aptitude install libsndfile
+
 # on os x
 sudo port install libsndfile
 
@@ -16,4 +17,7 @@ install python-dev libboost-dev libtag1-dev ffmpeg
 brew install boost taglib
 
 
- 
+
+
+# linux packages
+
