importer templates refactored to nunjucks

--- a/README
+++ b/README
@@ -31,5 +31,5 @@ screen
 
 
 # haystack backend (solr)
-cd ~/srv/openbroadcast.ch-upgrade/services/solr-4.1.0/alibrary
+cd ~/srv/openbroadcast.ch-upgrade/services/apache-solr-3.6.2/example
 java -jar start.jar
