--- a/README
+++ b/README
@@ -43,8 +43,12 @@ java -jar start.jar
 mysqldump5 -h 127.0.0.1 -u root -proot ch_openbroadcast_local > ~/tmp/ch_openbroadcast_local.sql
 mysql5 -h 127.0.0.1 -u root -proot ch_openbroadcast_local < ~/tmp/ch_openbroadcast_local.sql
 
-
+# pushy
+cd code/django-apps/django-pushy/server/
+node pushy.js
 
 # font compiler
 cd ~/code/openbroadcast.ch/website/site-static
 fontcustom watch iconset -n FontAwesome -o css/iconset
+
+
